[tool.poetry]
name = "Ant Colony Optimization"
version = "0.1.0"
description = ""
authors = ["Harish <harishhari3112004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
