[tool.poetry]
name = "ACO"
version = "0.2.3"
license = "MIT"
description = "Ant Colony Optimization in Python"
authors = ["Harish <harishhari3112004@gmail.com>"]
repository = 'https://github.com/harish3124/aco'
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
matplotlib = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
